--- a/index.html
+++ b/index.html
@@ -433,8 +433,8 @@
             analyzeBtn.addEventListener('click', analyze);
             reconstituteBtn.addEventListener('click', reconstitute);
             window.addEventListener('resize', () => { if(analysisResult) drawVisualization(); });
-            
-            inputEl.value = "M340.5,26.18L335.5,27.07L331.79,27.64L328.08,28.2L326.89,29.63L325.71,31.05L325.33,40.78L324.94,50.5L324.97,55.35L325,60.2L323.33,63.02L321.66,65.85L318.08,67.38L314.5,68.9L303.5,70.55L292.5,72.19L280.5,75.2L268.5,78.2L248,85.69L227.5,93.18L214.5,99.58L201.5,105.99L191,";
+
+            inputEl.value = "abcdeabcdeabcdeabcdeabcdePAPAPAPAPAzzyyzzxxyyzz";
             analyze();
         });
     </script>
